Adição da tela de cadastro de clientes

--- a/Jagan/Jagan.csproj
+++ b/Jagan/Jagan.csproj
@@ -87,6 +87,7 @@
       <LastGenOutput>Banco.cs</LastGenOutput>
     </Content>
     <Content Include="JS\Index.jsx" />
+    <Content Include="Login\Cadastro.aspx" />
     <Content Include="Login\default.aspx" />
     <Content Include="Painel\default.aspx" />
     <Content Include="Style\Index.css" />
@@ -112,6 +113,13 @@
     <Compile Include="Banco de dados\usuarios.cs">
       <DependentUpon>Banco.tt</DependentUpon>
     </Compile>
+    <Compile Include="Login\Cadastro.aspx.cs">
+      <DependentUpon>Cadastro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login\Cadastro.aspx.designer.cs">
+      <DependentUpon>Cadastro.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Login\default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -126,13 +134,6 @@
     <Compile Include="Painel\default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Painel\Master.Master.cs">
-      <DependentUpon>Master.Master</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Painel\Master.Master.designer.cs">
-      <DependentUpon>Master.Master</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -144,7 +145,6 @@
       <DependentUpon>Banco.edmx</DependentUpon>
     </Content>
     <None Include="packages.config" />
-    <Content Include="Painel\Master.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
