Mudanças na folha de estilo de todo o projeto e adição da tela de produtos

--- a/Jagan/Jagan.csproj
+++ b/Jagan/Jagan.csproj
@@ -86,10 +86,14 @@
       <DependentUpon>Banco.edmx</DependentUpon>
       <LastGenOutput>Banco.cs</LastGenOutput>
     </Content>
+    <Content Include="Imagens\produto.jpg" />
     <Content Include="JS\Index.jsx" />
     <Content Include="Login\Cadastro.aspx" />
     <Content Include="Login\default.aspx" />
     <Content Include="Painel\default.aspx" />
+    <Content Include="Painel\produtos.aspx" />
+    <Content Include="Style\bootstrap.min.css" />
+    <Content Include="Style\cadastro.css" />
     <Content Include="Style\Index.css" />
     <Content Include="Style\login.css" />
     <Content Include="Web.config" />
@@ -134,6 +138,13 @@
     <Compile Include="Painel\default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Painel\produtos.aspx.cs">
+      <DependentUpon>produtos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Painel\produtos.aspx.designer.cs">
+      <DependentUpon>produtos.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -145,6 +156,7 @@
       <DependentUpon>Banco.edmx</DependentUpon>
     </Content>
     <None Include="packages.config" />
+    <Content Include="Style\bootstrap.min.css.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
